Embedding benchmarking, MC bug fix

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -136,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTaBase\"\n",
-    "task_param = \"mnli_matched\"\n",
+    "task_param = \"wnli\"\n",
     "embedding_param = \"mean_pooling\""
    ]
   },
@@ -154,19 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
-      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if model_param == \"MPNetBase\": # MPNet Base\n",
     "    from transformers import MPNetTokenizer, MPNetModel\n",
@@ -188,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,19 +178,21 @@
     "# class_type: [\"BC\", \"MC\", \"R\"]\n",
     "# input_size: int (represents input size of feedforward, aka embedding size)\n",
     "# col_names: column names of relavent sentences on hugging face\n",
+    "# num_classes needs to be 1 for BC and R, only change value to number of classes for MC\n",
     "\n",
-    "TaskConfig = namedtuple(\"TaskConfig\", [\"sentence_type\", \"class_type\", \"input_size\", \"col_names\"])\n",
+    "TaskConfig = namedtuple(\"TaskConfig\", [\"sentence_type\", \"class_type\", \"num_classes\", \"input_size\", \"col_names\"])\n",
+    "\n",
     "task_configs = {\n",
-    "    \"cola\": TaskConfig(\"one\", \"BC\", 768, ['sentence']),\n",
-    "    \"sst2\": TaskConfig(\"one\", \"BC\", 768, ['sentence']),\n",
-    "    \"mrpc\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"stsb\": TaskConfig(\"two\", \"R\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"qqp\": TaskConfig(\"two\", \"BC\", 768*2, ['question1', 'question2']),\n",
-    "    \"mnli_matched\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"mnli_mismatched\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"qnli\": TaskConfig(\"two\", \"BC\", 768*2, ['question', 'sentence']),\n",
-    "    \"rte\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"wnli\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"cola\": TaskConfig(\"one\", \"BC\", 1, 768, ['sentence']),\n",
+    "    \"sst2\": TaskConfig(\"one\", \"BC\", 1, 768, ['sentence']),\n",
+    "    \"mrpc\": TaskConfig(\"two\", \"BC\", 1, 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"stsb\": TaskConfig(\"two\", \"R\", 1, 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"qqp\": TaskConfig(\"two\", \"BC\", 1, 768*2, ['question1', 'question2']),\n",
+    "    \"mnli_matched\": TaskConfig(\"two\", \"MC\", 3, 768*2, ['premise', 'hypothesis']),\n",
+    "    \"mnli_mismatched\": TaskConfig(\"two\", \"MC\", 3, 768*2, ['premise', 'hypothesis']),\n",
+    "    \"qnli\": TaskConfig(\"two\", \"BC\", 1, 768*2, ['question', 'sentence']),\n",
+    "    \"rte\": TaskConfig(\"two\", \"BC\", 1, 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"wnli\": TaskConfig(\"two\", \"BC\", 1, 768*2, ['sentence1', 'sentence2']),\n",
     "}\n",
     "\n",
     "task_config = task_configs[task_param]"
@@ -223,41 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 392702\n",
-       "    })\n",
-       "    validation_matched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9815\n",
-       "    })\n",
-       "    validation_mismatched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9832\n",
-       "    })\n",
-       "    test_matched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9796\n",
-       "    })\n",
-       "    test_mismatched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9847\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -291,20 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([0, 1, 2])]\n",
-      "(392702, 3)\n",
-      "(9815, 3)\n",
-      "(9796, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -338,17 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No saved embeddings found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cache_dir = f\"./cache/{embedding_param}/{task_param}\"\n",
     "cache_path = pathlib.Path(cache_dir)\n",
@@ -377,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,19 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 24544/24544 [2:13:45<00:00,  3.06it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 614/614 [03:20<00:00,  3.07it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 613/613 [03:19<00:00,  3.07it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compute_single_embeddings(loader):\n",
     "    embeddings = []\n",
@@ -555,6 +478,9 @@
     "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
     "if use_cached_embeddings == False:\n",
+    "    # Track time\n",
+    "    start_time = time.time()\n",
+    "\n",
     "    if task_config.sentence_type == \"one\":\n",
     "        train_embed = compute_single_embeddings(train_loader)\n",
     "        val_embed = compute_single_embeddings(val_loader)\n",
@@ -562,12 +488,16 @@
     "    elif task_config.sentence_type == \"two\":\n",
     "        train_embed = compute_pair_embeddings(train_loader)\n",
     "        val_embed = compute_pair_embeddings(val_loader)\n",
-    "        test_embed = compute_pair_embeddings(test_loader)"
+    "        test_embed = compute_pair_embeddings(test_loader)\n",
+    "    \n",
+    "    embedding_time = time.time() - start_time\n",
+    "else:\n",
+    "    embedding_time = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,14 +509,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# recompute tensors for two sentence tasks\n",
     "def recompute_embedding(dataset):\n",
-    "    recomputed = []\n",
-    "\n",
     "    U = dataset[:, :768]\n",
     "    V = dataset[:, 768:]\n",
     "    new = U - V\n",
@@ -596,19 +524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(392702, 768)\n",
-      "(9815, 768)\n",
-      "(9796, 768)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recomputed = True\n",
     "X_train_recomputed = recompute_embedding(X_train)\n",
@@ -622,22 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(392702, 1536)\n",
-      "(392702, 3)\n",
-      "(9815, 1536)\n",
-      "(9815, 3)\n",
-      "(9796, 1536)\n",
-      "(9796, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(X_train.shape)\n",
     "print(Y_train.shape)\n",
@@ -649,20 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 0., 0.])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y_train[3]"
    ]
@@ -676,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,17 +606,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "72 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_size = task_config.input_size\n",
     "if recomputed:\n",
@@ -736,7 +622,7 @@
     "    'norm': [False],\n",
     "    'input_size': [input_size],\n",
     "    'layer_size': [input_size // 2, input_size, input_size * 2],\n",
-    "    'num_classes': [3], # num_classes == 1 for BC and R, num_classes > 1 for MC\n",
+    "    'num_classes': [task_config.num_classes],\n",
     "    'num_layers': [1, 5, 10],\n",
     "    'weight_decay':[1e-2, 1e-4],\n",
     "    'patience': [3],\n",
@@ -753,22 +639,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./results/mean_pooling/mnli_matched/val_20231216_085428_DistilRoBERTaBase.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Best Acc: 0.67682, Last test: 0.66531:   4%|█▊                                         | 3/72 [22:50<9:23:32, 490.04s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup for logging\n",
     "console_output_filename = f'./output/{embedding_param}_{task_param}_console_output.txt'\n",
@@ -785,7 +656,7 @@
     "    with open(results_file, 'w', newline='') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "        headers = list(all_params[0].keys())\n",
-    "        writer.writerow(['mcc', 'f1', 'accuracy', 'training time', 'training energy'] + headers)\n",
+    "        writer.writerow(['mcc', 'f1', 'accuracy', 'training time', 'embedding time', 'training energy', 'embedding energy'] + headers)\n",
     "    print(f\"saving results to ./{results_file}\")\n",
     "    # Saves best accuracy for progress bar display\n",
     "    best_acc = 0.0\n",
@@ -793,7 +664,7 @@
     "    with open(results_file, 'w', newline='') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "        headers = list(all_params[0].keys())\n",
-    "        writer.writerow(['pearson', 'spearman', 'training time', 'training energy'] + headers)\n",
+    "        writer.writerow(['pearson', 'spearman', 'training time', 'embedding time', 'training energy', 'embedding energy'] + headers)\n",
     "    print(f\"saving results to ./{results_file}\")\n",
     "    # Saves best accuracy for progress bar display\n",
     "    best_pearson = -2.0\n",
@@ -819,11 +690,13 @@
     "                                                                            Y_train,\n",
     "                                                                            X_val,\n",
     "                                                                            Y_val)\n",
-    "        \n",
-    "    training_time = np.mean(train_times_per_epoch)\n",
-    "    training_energy = np.mean(energy_per_epoch) \n",
+    "    \n",
     "    # Log average training time per epoch for current parameter set\n",
     "    # Note: FFN frequently stops early\n",
+    "    training_time = np.mean(train_times_per_epoch)\n",
+    "    training_energy = np.mean(energy_per_epoch) \n",
+    "    # Compute energy for embedding generation\n",
+    "    embedding_energy = feed_forward.get_energy_per_epoch(embedding_time) # This method effectively just computes energy for a given time\n",
     "\n",
     "    if task_config.class_type in [\"BC\", \"MC\"]:\n",
     "        epoch, val_loss, val_accuracy, val_f1, val_mcc = metrics[\"epoch\"], metrics[\"loss\"], metrics[\"acc\"], metrics[\"f1\"], metrics[\"mcc\"]\n",
@@ -838,12 +711,14 @@
     "            logfile.write(f\"\\nValidation f1-score: {val_f1}\")\n",
     "            logfile.write(f\"\\nValidation MCC     : {val_mcc}\")\n",
     "            logfile.write(f\"\\nTraining time      : {training_time}\") \n",
+    "            logfile.write(f\"\\nEmbedding time      : {embedding_time}\") \n",
     "            logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
+    "            logfile.write(f\"\\nEmbedding energy    : {embedding_energy}\") \n",
     "        # Write to results csv\n",
     "        with open(results_file, 'a', newline='') as csvfile:\n",
     "            writer = csv.writer(csvfile)\n",
-    "            writer.writerow([val_mcc, val_f1, val_accuracy, training_time, training_energy] + list(params.values()))\n",
-    "            \n",
+    "            writer.writerow([val_mcc, val_f1, val_accuracy, training_time, embedding_time, training_energy, embedding_energy] + list(params.values()))\n",
+    "                \n",
     "    elif task_config.class_type == \"R\":  # just report loss for regression task\n",
     "        epoch, val_loss, val_pearson, val_spearman = metrics[\"epoch\"], metrics[\"loss\"], metrics[\"pearson\"], metrics[\"spearman\"]\n",
     "        best_pearson = max(best_pearson, val_pearson)\n",
@@ -857,11 +732,13 @@
     "            logfile.write(f\"\\nValidation Pearson's corrcoef: {val_pearson}\")\n",
     "            logfile.write(f\"\\nValidation Spearman's corrcoef: {val_spearman}\")\n",
     "            logfile.write(f\"\\nTraining time      : {training_time}\") \n",
+    "            logfile.write(f\"\\nEmbedding time      : {embedding_time}\") \n",
     "            logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
+    "            logfile.write(f\"\\nEmbedding energy    : {embedding_energy}\")  \n",
     "        # Write to results csv\n",
     "        with open(results_file, 'a', newline='') as csvfile:\n",
     "            writer = csv.writer(csvfile)\n",
-    "            writer.writerow([val_pearson, val_spearman, training_time, training_energy] + list(params.values()))"
+    "            writer.writerow([val_pearson, val_spearman, training_time, embedding_time, training_energy, embedding_energy] + list(params.values()))"
    ]
   },
   {
