--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -43,6 +43,8 @@
     "from collections import namedtuple\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
+    "from carbontracker.tracker import CarbonTracker\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -478,8 +480,13 @@
     "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
     "if use_cached_embeddings == False:\n",
-    "    # Track time\n",
-    "    start_time = time.time()\n",
+    "    try:\n",
+    "        tracker = CarbonTracker(epochs=1)\n",
+    "        tracker.epoch_start()\n",
+    "    except:\n",
+    "        print(\"CarbonTracker error in embedding: defaulting to old tracking method\")\n",
+    "        # Track time\n",
+    "        start_time = time.time()\n",
     "\n",
     "    if task_config.sentence_type == \"one\":\n",
     "        train_embed = compute_single_embeddings(train_loader)\n",
@@ -490,7 +497,11 @@
     "        val_embed = compute_pair_embeddings(val_loader)\n",
     "        test_embed = compute_pair_embeddings(test_loader)\n",
     "    \n",
-    "    embedding_time = time.time() - start_time\n",
+    "    try:\n",
+    "        tracker.epoch_end()\n",
+    "        embedding_time = 0.0 # temporary value for logging\n",
+    "    except:\n",
+    "        embedding_time = time.time() - start_time\n",
     "else:\n",
     "    embedding_time = 0.0"
    ]
