--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -54,7 +54,8 @@
     "\n",
     "from utils.feed_forward import FeedForward\n",
     "from utils.cls import extract_cls_embeddings\n",
-    "from utils.mean_pooling import mean_pooling"
+    "from utils.mean_pooling import mean_pooling\n",
+    "from utils.energy import get_energy"
    ]
   },
   {
@@ -707,7 +708,7 @@
     "    training_time = np.mean(train_times_per_epoch)\n",
     "    training_energy = np.mean(energy_per_epoch) \n",
     "    # Compute energy for embedding generation\n",
-    "    embedding_energy = feed_forward.get_energy_per_epoch(embedding_time) # This method effectively just computes energy for a given time\n",
+    "    embedding_energy = get_energy(embedding_time) # This method effectively just computes energy for a given time\n",
     "\n",
     "    if task_config.class_type in [\"BC\", \"MC\"]:\n",
     "        epoch, val_loss, val_accuracy, val_f1, val_mcc = metrics[\"epoch\"], metrics[\"loss\"], metrics[\"acc\"], metrics[\"f1\"], metrics[\"mcc\"]\n",
