--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,22 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'energy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dataset, DataLoader\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeed_forward\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FeedForward\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcls\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m extract_cls_embeddings\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmean_pooling\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_pooling\n",
-      "File \u001b[0;32m~/Downloads/projectx-1/fast/utils/feed_forward.py:9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnotebook\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcarbontracker\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtracker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CarbonTracker\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01menergy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_energy\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mEarlyStopper\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124;03m    A utility class that stops training when a monitored metric stops improving.\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'energy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import time\n",
@@ -150,7 +137,11 @@
    "source": [
     "model_param = \"DistilRoBERTaBase\"\n",
     "task_param = \"wnli\"\n",
-    "embedding_param = \"mean_pooling\""
+    "embedding_param = \"mean_pooling\"\n",
+    "\n",
+    "use_carbontracker = False \n",
+    "# NOTE: Carbontracker should generate its own output file \n",
+    "# => logged benchmarking results will be dummy values if use_carbontracker = True"
    ]
   },
   {
@@ -494,11 +485,12 @@
     "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
     "if use_cached_embeddings == False:\n",
-    "    try:\n",
+    "    if use_carbontracker:\n",
+    "        print(\"Embedding: Using Carbontracker\")\n",
     "        tracker = CarbonTracker(epochs=1)\n",
     "        tracker.epoch_start()\n",
-    "    except:\n",
-    "        print(\"CarbonTracker error in embedding: defaulting to old tracking method\")\n",
+    "    else:\n",
+    "        print(\"Embedding: Using default time tracking\")\n",
     "        # Track time\n",
     "        start_time = time.time()\n",
     "\n",
@@ -511,10 +503,10 @@
     "        val_embed = compute_pair_embeddings(val_loader)\n",
     "        test_embed = compute_pair_embeddings(test_loader)\n",
     "    \n",
-    "    try:\n",
+    "    if use_carbontracker:\n",
     "        tracker.epoch_end()\n",
     "        embedding_time = 0.0 # temporary value for logging\n",
-    "    except:\n",
+    "    else:\n",
     "        embedding_time = time.time() - start_time\n",
     "else:\n",
     "    embedding_time = 0.0"
@@ -564,29 +556,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(X_train.shape)\n",
-    "print(Y_train.shape)\n",
-    "print(X_val.shape)\n",
-    "print(Y_val.shape)\n",
-    "print(X_test.shape)\n",
-    "print(Y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_train[3]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -618,15 +587,6 @@
    "metadata": {},
    "source": [
     "# Training loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recomputed = True"
    ]
   },
   {
@@ -709,12 +669,14 @@
     "        metrics, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train_recomputed,\n",
     "                                                                            Y_train,\n",
     "                                                                            X_val_recomputed,\n",
-    "                                                                            Y_val)\n",
+    "                                                                            Y_val,\n",
+    "                                                                            use_carbontracker)\n",
     "    else:\n",
     "        metrics, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train,\n",
     "                                                                            Y_train,\n",
     "                                                                            X_val,\n",
-    "                                                                            Y_val)\n",
+    "                                                                            Y_val,\n",
+    "                                                                            use_carbontracker)\n",
     "    \n",
     "    # Log average training time per epoch for current parameter set\n",
     "    # Note: FFN frequently stops early\n",
@@ -784,6 +746,116 @@
     "    best_row = results_df[results_df[metric] == best]\n",
     "\n",
     "best_row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adapter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Benchmarking example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "import pynvml\n",
+    "from utils.adapter import BERTAdapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adapter_param_grid = {\n",
+    "    'num_epochs': [50],\n",
+    "    'batch_size': [32, 512],\n",
+    "    'learning_rate': [1e-2, 1e-3],\n",
+    "    'category': [task_config.class_type],\n",
+    "    'device': [device_name]\n",
+    "}\n",
+    "\n",
+    "# Create a list of all combinations of hyperparameters\n",
+    "adapter_params = [dict(zip(adapter_param_grid.keys(), v)) for v in itertools.product(*adapter_param_grid.values())]\n",
+    "print(f\"{len(adapter_params)} hyperparameter combinations\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup for saving power outputs\n",
+    "results_folder = pathlib.Path(f\"results/adapter/{task_param}\")\n",
+    "results_folder.mkdir(parents=True, exist_ok=True)\n",
+    "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "results_file = results_folder / f\"val_{save_file_id}.csv\"\n",
+    "with open(results_file, 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    writer.writerow(['power', 'time'])\n",
+    "print(f\"saving results to ./{results_file}\")\n",
+    "\n",
+    "# Iterate over all combinations of hyperparameters\n",
+    "adapter_bar = tqdm(enumerate(adapter_params), total=len(adapter_params))\n",
+    "for i, params in adapter_bar:\n",
+    "    # Formatting params to display\n",
+    "    print_params = params.copy()\n",
+    "    for param in ['category', 'device']:\n",
+    "        del print_params[param]\n",
+    "\n",
+    "    # Initialize the model with current set of hyperparameters\n",
+    "    adapter = BERTAdapter(**params)\n",
+    "\n",
+    "    # Create a thread for tracking power output (NVIDIA ONLY), logs power and time\n",
+    "    def get_power():\n",
+    "        pynvml.nvmlInit()\n",
+    "        while not adapter.train_stop_flag:\n",
+    "            handle = pynvml.nvmlDeviceGetHandleByIndex(0)  # Returns device handle, index 0 specifies the first GPU\n",
+    "            power = pynvml.nvmlDeviceGetPowerUsage(handle)  # Retrieves power usage for GPU in milliwatts\n",
+    "            power = power / 1000  # convert mW to W\n",
+    "            curr_time = time.time()\n",
+    "            print(\"Current NVIDIA power output:\", power, \"at time\", curr_time)\n",
+    "            # Write to results csv\n",
+    "            with open(results_file, 'a', newline='') as csvfile:\n",
+    "                writer = csv.writer(csvfile)\n",
+    "                writer.writerow([power, curr_time])\n",
+    "                \n",
+    "        pynvml.nvmlShutdown()\n",
+    "        \n",
+    "    power_thread = threading.Thread(target=get_power)\n",
+    "\n",
+    "    # Make sure power output was recorded in the correct time range\n",
+    "    print(\"Start time:\", time.time()) \n",
+    "\n",
+    "    if recomputed:\n",
+    "        power_thread.start()  # Start the benchmarking thread\n",
+    "        adapter.fit(X_train_recomputed,\n",
+    "                    Y_train,\n",
+    "                    X_val_recomputed,\n",
+    "                    Y_val)\n",
+    "        power_thread.join()  # Wait for the thread to complete\n",
+    "    else:\n",
+    "        power_thread.start()  # Start the benchmarking thread\n",
+    "        adapter.fit(X_train,\n",
+    "                    Y_train,\n",
+    "                    X_val,\n",
+    "                    Y_val)\n",
+    "        power_thread.join()  # Wait for the thread to complete\n",
+    "        \n",
+    "    print(\"End time:\", time.time())"
    ]
   }
  ],
