cleaned up embedding generation code
now it is more consistent between sentence transformers and cls/mean_pooling
also added in expanded hyperparameter combinations

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import time\n",
     "import csv\n",
+    "import os\n",
     "import pathlib\n",
     "import itertools\n",
     "from datetime import datetime\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
-    "    device_name = \"gpu\"  # CUDA for NVIDIA GPU\n",
+    "    # I read that this works for detecting if notebook is being run in a colab environment, not sure though\n",
+    "    if 'COLAB_GPU' in os.environ:\n",
+    "        print(\"I'm running on Colab\")\n",
+    "        device_name = \"gpu\" \n",
+    "    else:\n",
+    "        device_name = \"cuda\" # CUDA for NVIDIA GPU\n",
     "elif torch.backends.mps.is_available():\n",
     "    device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
     "\n",
@@ -131,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "if model_param == \"MPNetBase\": # MPNet Base\n",
     "    from transformers import MPNetTokenizer, MPNetModel\n",
@@ -177,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +238,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 635\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 71\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 146\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -250,9 +298,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(635,)\n",
+      "(71,)\n",
+      "(146,)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -286,9 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved embeddings found!\n"
+     ]
+    }
+   ],
    "source": [
     "cache_dir = f\"./cache/{embedding_param}/{task_param}\"\n",
     "cache_path = pathlib.Path(cache_dir)\n",
@@ -309,6 +375,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_cached_embeddings = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,37 +392,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GLUESingleSentence(Dataset):\n",
-    "    def __init__(self, texts, tokenizer, max_length=512):\n",
-    "        self.tokenizer = tokenizer\n",
+    "    def __init__(self, texts):\n",
     "        self.texts = texts\n",
-    "        self.max_length = max_length\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.texts)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        text = self.texts[idx]\n",
-    "        inputs = self.tokenizer.encode_plus(\n",
-    "            text, \n",
-    "            add_special_tokens=True, \n",
-    "            max_length=self.max_length,\n",
-    "            padding='max_length',\n",
-    "            truncation=True,\n",
-    "            return_tensors='pt'\n",
-    "        )\n",
-    "        return inputs['input_ids'].squeeze(0), inputs['attention_mask'].squeeze(0)\n",
+    "        return self.texts[idx]\n",
     "    \n",
     "class GLUEPairedSentence(Dataset):\n",
-    "    def __init__(self, texts1, texts2, tokenizer, max_length=512):\n",
-    "        self.tokenizer = tokenizer\n",
+    "    def __init__(self, texts1, texts2):\n",
     "        self.texts1 = texts1\n",
     "        self.texts2 = texts2\n",
-    "        self.max_length = max_length\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.texts1)\n",
@@ -356,70 +418,42 @@
     "        text1 = self.texts1[idx]\n",
     "        text2 = self.texts2[idx]\n",
     "\n",
-    "        inputs1 = self.tokenizer.encode_plus(\n",
-    "            text1, \n",
-    "            add_special_tokens=True, \n",
-    "            max_length=self.max_length,\n",
-    "            padding='max_length',\n",
-    "            truncation=True,\n",
-    "            return_tensors='pt'\n",
-    "        )\n",
-    "        inputs2 = self.tokenizer.encode_plus(\n",
-    "            text2, \n",
-    "            add_special_tokens=True, \n",
-    "            max_length=self.max_length,\n",
-    "            padding='max_length',\n",
-    "            truncation=True,\n",
-    "            return_tensors='pt'\n",
-    "        )\n",
-    "        return inputs1['input_ids'].squeeze(0), inputs1['attention_mask'].squeeze(0), \\\n",
-    "               inputs2['input_ids'].squeeze(0), inputs2['attention_mask'].squeeze(0)\n",
-    "\n",
-    "class GLUEPairedSentenceST(Dataset):\n",
-    "    def __init__(self, texts1, texts2, max_length=512):\n",
-    "        self.texts1 = texts1\n",
-    "        self.texts2 = texts2\n",
-    "        self.max_length = max_length\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.texts1)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        inputs1 = self.texts1[idx]\n",
-    "        inputs2 = self.texts2[idx]\n",
-    "\n",
-    "        return inputs1, inputs2"
+    "        return text1, text2\n",
+    "    \n",
+    "def tokenize_batch(tokenizer, text_batch, max_len=512):\n",
+    "    encoded = tokenizer(text_batch,\n",
+    "                        add_special_tokens=True,\n",
+    "                        padding='max_length',\n",
+    "                        truncation=True,\n",
+    "                        max_length=max_len,\n",
+    "                        return_tensors='pt')\n",
+    "    return {k: v.to(device) for k, v in encoded.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "if task_config.sentence_type == \"one\":\n",
-    "    train_dataset = GLUESingleSentence(data['train']['sentence'], tokenizer)\n",
-    "    val_dataset = GLUESingleSentence(data['validation']['sentence'], tokenizer)\n",
-    "    test_dataset = GLUESingleSentence(data['test']['sentence'], tokenizer)\n",
+    "    train_dataset = GLUESingleSentence(data['train']['sentence'])\n",
+    "    val_dataset = GLUESingleSentence(data['validation']['sentence'])\n",
+    "    test_dataset = GLUESingleSentence(data['test']['sentence'])\n",
     "    \n",
     "elif task_config.sentence_type == \"two\":\n",
     "    key1 = task_config.col_names[0]\n",
     "    key2 = task_config.col_names[1]\n",
     "    \n",
-    "    if embedding_param in [\"cls\", \"mean_pooling\"]:\n",
-    "        train_dataset = GLUEPairedSentence(data['train'][key1], data['train'][key2], tokenizer)\n",
-    "        val_dataset = GLUEPairedSentence(data[val_key][key1], data[val_key][key2], tokenizer)\n",
-    "        test_dataset = GLUEPairedSentence(data[test_key][key1], data[test_key][key2], tokenizer)\n",
-    "    elif embedding_param == \"sentence\":\n",
-    "        train_dataset = GLUEPairedSentenceST(data['train'][key1], data['train'][key2])\n",
-    "        val_dataset = GLUEPairedSentenceST(data[val_key][key1], data[val_key][key2])\n",
-    "        test_dataset = GLUEPairedSentenceST(data[test_key][key1], data[test_key][key2])\n",
+    "    train_dataset = GLUEPairedSentence(data['train'][key1], data['train'][key2])\n",
+    "    val_dataset = GLUEPairedSentence(data[val_key][key1], data[val_key][key2])\n",
+    "    test_dataset = GLUEPairedSentence(data[test_key][key1], data[test_key][key2])\n",
     "        \n",
     "else:\n",
     "    raise Exception(f\"{task_config.sentence_type}: sentence type not recognized\")\n",
     "\n",
     "# pick batch size based on GPU memory\n",
-    "batch_size = 16\n",
+    "batch_size = 1024\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
@@ -427,24 +461,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embedding: Using default time tracking\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58578c5354784a2e9dd5272d6447f59b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87a6f2587ae648b9b670bfd3aa5af8ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d573178227a4e67a1908b5fea29cc54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def compute_single_embeddings(loader):\n",
     "    embeddings = []\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for input_ids, attention_mask in tqdm(loader):\n",
-    "            input_ids = input_ids.to(device)\n",
-    "            attention_mask = attention_mask.to(device)\n",
-    "\n",
-    "            outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "        for text in tqdm(loader):\n",
+    "            encoded = tokenize_batch(tokenizer, text)\n",
+    "            outputs = model(encoded[\"input_ids\"], attention_mask=encoded[\"attention_mask\"])\n",
     "\n",
     "            if embedding_param == \"cls\":\n",
     "                embed = extract_cls_embeddings(outputs)\n",
     "            elif embedding_param == \"mean_pooling\":\n",
-    "                embed = mean_pooling(outputs, attention_mask)\n",
+    "                embed = mean_pooling(outputs, encoded[\"attention_mask\"])\n",
     "                \n",
     "            embeddings.append(embed.cpu().numpy())\n",
     "\n",
@@ -454,33 +536,27 @@
     "    embeddings = []\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        \n",
-    "        if embedding_param in [\"cls\", \"mean_pooling\"]:\n",
-    "            for input_ids1, attention_mask1, input_ids2, attention_mask2 in tqdm(loader):\n",
-    "                input_ids1 = input_ids1.to(device)\n",
-    "                attention_mask1 = attention_mask1.to(device)\n",
-    "                input_ids2 = input_ids2.to(device)\n",
-    "                attention_mask2 = attention_mask2.to(device)\n",
-    "    \n",
-    "                outputs1 = model(input_ids1, attention_mask=attention_mask1)\n",
-    "                outputs2 = model(input_ids2, attention_mask=attention_mask2)\n",
-    "                    \n",
+    "\n",
+    "        for text1, text2 in tqdm(loader):\n",
+    "            encoded1 = tokenize_batch(tokenizer, text1)\n",
+    "            encoded2 = tokenize_batch(tokenizer, text2)\n",
+    "\n",
+    "            if embedding_param == \"sentence\":\n",
+    "                U = torch.tensor(model.encode(encoded1[\"input_ids\"]))\n",
+    "                V = torch.tensor(model.encode(encoded2[\"input_ids\"]))\n",
+    "            else: # cls or mean_pooling\n",
+    "                outputs1 = model(encoded1[\"input_ids\"], attention_mask=encoded1[\"attention_mask\"])\n",
+    "                outputs2 = model(encoded2[\"input_ids\"], attention_mask=encoded2[\"attention_mask\"])\n",
+    "\n",
     "                if embedding_param == \"cls\":\n",
     "                    U = extract_cls_embeddings(outputs1)\n",
     "                    V = extract_cls_embeddings(outputs2)\n",
     "                elif embedding_param == \"mean_pooling\":\n",
-    "                    U = mean_pooling(outputs1, attention_mask1)\n",
-    "                    V = mean_pooling(outputs2, attention_mask2)\n",
-    "                    \n",
-    "                embed = torch.cat([U, V], dim=1)\n",
-    "                embeddings.append(embed.cpu().numpy())\n",
-    "        \n",
-    "        elif embedding_param == \"sentence\":\n",
-    "            for input_ids1, input_ids2 in tqdm(loader):\n",
-    "                U = torch.tensor(model.encode(input_ids1))\n",
-    "                V = torch.tensor(model.encode(input_ids2))\n",
-    "                embed = torch.cat([U, V], dim=1)\n",
-    "                embeddings.append(embed.cpu().numpy())\n",
+    "                    U = mean_pooling(outputs1, encoded1[\"attention_mask\"])\n",
+    "                    V = mean_pooling(outputs2, encoded2[\"attention_mask\"])\n",
+    "\n",
+    "            embed = torch.cat([U, V], dim=1)\n",
+    "            embeddings.append(embed.cpu().numpy())\n",
     "\n",
     "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
@@ -514,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,9 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(635, 768)\n",
+      "(71, 768)\n",
+      "(146, 768)\n"
+     ]
+    }
+   ],
    "source": [
     "recomputed = True\n",
     "X_train_recomputed = recompute_embedding(X_train)\n",
@@ -564,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,9 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160 hyperparameter combinations\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = task_config.input_size\n",
     "if recomputed:\n",
@@ -606,9 +700,9 @@
     "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
     "    'input_size': [input_size],\n",
-    "    'layer_size': [input_size // 2, input_size, input_size * 2],\n",
+    "    'layer_size': [input_size // 4, input_size // 2, input_size, input_size * 2, input_size * 4],\n",
     "    'num_classes': [task_config.num_classes],\n",
-    "    'num_layers': [1, 5, 10],\n",
+    "    'num_layers': [1, 3, 5, 10],\n",
     "    'weight_decay':[1e-2, 1e-4],\n",
     "    'patience': [3],\n",
     "    'min_delta': [0],\n",
