--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -26,10 +26,107 @@
     "import itertools\n",
     "from datetime import datetime\n",
     "from tqdm import tqdm\n",
+    "import torch\n",
+    "import os\n",
+    "from datasets import load_dataset\n",
+    "from collections import namedtuple\n",
     "\n",
     "import threading\n",
     "import pynvml\n",
     "from utils.adapter import BERTAdapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device_name = \"cpu\"  # default device is CPU\n",
+    "if torch.cuda.is_available():\n",
+    "    # I read that this works for detecting if notebook is being run in a colab environment, not sure though\n",
+    "    if 'COLAB_GPU' in os.environ:\n",
+    "        print(\"colab environment\")\n",
+    "        device_name = \"gpu\" \n",
+    "    else:\n",
+    "        device_name = \"cuda\" # CUDA for NVIDIA GPU\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
+    "\n",
+    "device = torch.device(device_name)\n",
+    "print(device_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task_param = \"cola\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentence_type: [\"one\", \"two\"]\n",
+    "# class_type: [\"BC\", \"MC\", \"R\"]\n",
+    "# input_size: int (represents input size of feedforward, aka embedding size)\n",
+    "# col_names: column names of relavent sentences on hugging face\n",
+    "# num_classes needs to be 1 for BC and R, only change value to number of classes for MC\n",
+    "\n",
+    "TaskConfig = namedtuple(\"TaskConfig\", [\"sentence_type\", \"class_type\", \"num_classes\", \"input_size\", \"col_names\"])\n",
+    "\n",
+    "task_configs = {\n",
+    "    \"cola\": TaskConfig(\"one\", \"BC\", 1, 768, ['sentence']),\n",
+    "    \"sst2\": TaskConfig(\"one\", \"BC\", 1, 768, ['sentence']),\n",
+    "    \"mrpc\": TaskConfig(\"two\", \"BC\", 1, 768, ['sentence1', 'sentence2']),\n",
+    "    \"stsb\": TaskConfig(\"two\", \"R\", 1, 768, ['sentence1', 'sentence2']),\n",
+    "    \"qqp\": TaskConfig(\"two\", \"BC\", 1, 768, ['question1', 'question2']),\n",
+    "    \"mnli_matched\": TaskConfig(\"two\", \"MC\", 3, 768, ['premise', 'hypothesis']),\n",
+    "    \"mnli_mismatched\": TaskConfig(\"two\", \"MC\", 3, 768, ['premise', 'hypothesis']),\n",
+    "    \"qnli\": TaskConfig(\"two\", \"BC\", 1, 768, ['question', 'sentence']),\n",
+    "    \"rte\": TaskConfig(\"two\", \"BC\", 1, 768, ['sentence1', 'sentence2']),\n",
+    "    \"wnli\": TaskConfig(\"two\", \"BC\", 1, 768, ['sentence1', 'sentence2']),\n",
+    "}\n",
+    "\n",
+    "task_config = task_configs[task_param]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if task_param == \"mnli_matched\": \n",
+    "    data = load_dataset(\"glue\", \"mnli\") \n",
+    "    val_key = \"validation_matched\"\n",
+    "    test_key = \"test_matched\"\n",
+    "elif task_param == \"mnli_mismatched\":\n",
+    "    data = load_dataset(\"glue\", \"mnli\") \n",
+    "    val_key = \"validation_mismatched\"\n",
+    "    test_key = \"test_mismatched\"\n",
+    "else:\n",
+    "    data = load_dataset(\"glue\", task_param)\n",
+    "    val_key = \"validation\"\n",
+    "    test_key = \"test\"\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = data[\"train\"]\n",
+    "y = \"label\"\n",
+    "X_val = data[val_key]"
    ]
   },
   {
@@ -99,28 +196,31 @@
     "    # Make sure power output was recorded in the correct time range\n",
     "    print(\"Start time:\", time.time()) \n",
     "\n",
-    "    if recomputed:\n",
-    "        power_thread.start()  # Start the benchmarking thread\n",
-    "        adapter.fit(X_train_recomputed,\n",
-    "                    Y_train,\n",
-    "                    X_val_recomputed,\n",
-    "                    Y_val)\n",
-    "        power_thread.join()  # Wait for the thread to complete\n",
-    "    else:\n",
-    "        power_thread.start()  # Start the benchmarking thread\n",
-    "        adapter.fit(X_train,\n",
-    "                    Y_train,\n",
-    "                    X_val,\n",
-    "                    Y_val)\n",
-    "        power_thread.join()  # Wait for the thread to complete\n",
+    "    power_thread.start()  # Start the benchmarking thread\n",
+    "    metrics, train_times_per_epoch, energy_per_epoch = adapter.fit(X_train, y, X_val, y)\n",
+    "    power_thread.join()  # Wait for the thread to complete\n",
     "        \n",
     "    print(\"End time:\", time.time())"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "projectx",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
