--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -92,18 +92,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# device_name = \"cpu\"  # default device is CPU\n",
-    "# if torch.cuda.is_available():\n",
-    "#     # I read that this works for detecting if notebook is being run in a colab environment, not sure though\n",
-    "#     if 'COLAB_GPU' in os.environ:\n",
-    "#         print(\"colab environment\")\n",
-    "#         device_name = \"gpu\" \n",
-    "#     else:\n",
-    "#         device_name = \"cuda\" # CUDA for NVIDIA GPU\n",
-    "# elif torch.backends.mps.is_available():\n",
-    "#     device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
+    "device_name = \"cpu\"  # default device is CPU\n",
+    "if torch.cuda.is_available():\n",
+    "    # I read that this works for detecting if notebook is being run in a colab environment, not sure though\n",
+    "    if 'COLAB_GPU' in os.environ:\n",
+    "        print(\"colab environment\")\n",
+    "        device_name = \"gpu\" \n",
+    "    else:\n",
+    "        device_name = \"cuda\" # CUDA for NVIDIA GPU\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
     "\n",
-    "device_name = \"cuda:0\"\n",
+    "# device_name = \"cuda:0\"\n",
     "device = torch.device(device_name)\n",
     "print(device_name)"
    ]
